# cellular-automata

./: Cargo.toml  LICENSE  README.md  cellular-automata.d.ts  cellular-automata.js  cellular-automata_bg.wasm.d.ts  index.html
.cargo/: config.toml
blog/: README.md
src/: automata.rs  ecs.rs  main.rs
web/: .gitignore  index.html
