[package]
name = "cellular-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
ringbuffer = "0.15.0"
rand = "0.8.5"

[dependencies.bevy]
version = "0.12.0"
default-features = true

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.12.0"
default-features = false
features = ["dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
