[package]
name = "cellular-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ringbuffer = "0.15.0"

[dependencies.bevy]
version = "0.12.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies.clap]
version = "4.4.8"
features = ["derive"]

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.12.0"
features = ["dynamic_linking"]

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.65"
features = ["Location", "Url", "UrlSearchParams"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
